# fal-bundle-manager

./: .gitignore  README.md  pyproject.toml  ruff.toml
.claude/commands/: start.md
api/: app.py  config.py  pyproject.toml  requirements.txt  storage.py
api/routes/: create_blob.py  create_bundle.py  download_bundle.py  list_bundles.py  preflight.py  sync.py
api/scripts/: dependencies.sh  setup.sh  start.sh  test.sh  utils.sh
api/tests/: helpers.py  test_create_blob.py  test_create_bundle.py  test_download_bundle.py  test_list_bundles.py  test_preflight.py  test_status.py
cli/: README.md  __init__.py  __main__.py  client.py  install.sh  pyproject.toml  requirements.txt  uninstall.sh
cli/commands/: create.py  download.py  list.py
cli/core/: __init__.py  bundler.py  file_discovery.py  hashing.py  sync.py
cli/scripts/: dependencies.sh  install.sh  run.sh  setup.sh  test.sh  uninstall.sh
cli/tests/: README_integration.md  fixtures.py  integration.py  integration_simple.py  integration_simple_fixed.py  test_cli_create.py  test_cli_download.py  test_cli_list.py  test_create_bundle.py  test_helpers.py  test_pagination.py
docs/: architecture.md  contract_template.md  project_overview.md  project_structure.md  storage.md  types.md
docs/api/: 1_preflight.md  2_create_blob.md  3_create_bundle.md  4_list_bundles.md  5_download_bundle.md  README.md
fixtures/: direct_file.txt
scripts/: api.sh  cli.sh  install.sh  lint.sh  uninstall.sh
shared/: config.py  hash.py  logs.py  merkle.py  pyproject.toml  types.py  validation.py
specs/: merkle.md  new.md
(+30 files in other folders)
