[project]
name = "fal-bundles-api"
version = "0.1.0"
description = "API server for fal-bundles resource management"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "python-ulid==2.7.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "requests==2.32.3",
]

[tool.uv]
package = false
