[project]
name = "fal-bundles-cli"
version = "0.1.0"
description = "CLI tool for fal-bundles resource management"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "click>=8.1.0",
    "aiohttp>=3.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[tool.uv]
package = false
